# ParallNSU

1stTask/: 1.cpp  CMakeLists.txt  Makefile
2ndTask/1/: main.cpp  mean_results.csv  program  results.csv  results.txt  script.py  script2.py  script3.py
2ndTask/2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  mean_results.csv  node  node.cpp  results.csv  script.py  script2.py  script3.py  system_info.csv
2ndTask/3/: Makefile  main.cpp  main1.cpp  performance_table.xlsx  results.csv  script.py  script1.py  task3_each_section  task3_one_section
3rdTask/1/: Makefile  main.cpp  program  results.csv  script.py
3rdTask/2/: Makefile  main.cpp  pow_results.txt  program  sin_results.txt  sqrt_results.txt  test.py
4thTask/: main.py
5thTaskGit/: main.py
